# SimplyLaunch

./: Cargo.toml  README.md
src/: api.rs  endpoints.rs  main.rs
