[package]
name = "simply-launch"
description = "An alternate, simple horse game launcher"
authors = ["varsity"]
version = "1.0.1"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
json = "0.12.4"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
